--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./main.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,6 @@
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "youtube-dl-exec": "^3.0.10"
+    "youtube-dl-exec": "^3.0.27"
   }
 }
